--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@
 }
 
 
-body {background-image: url("./images/coffee.png");
+body {background-image: url("../images/contact.jpg");
 	background-image: no-repeat;
 
 }
