--- a/css/tools.css
+++ b/css/tools.css
@@ -4,7 +4,26 @@
 }
 
 
-body {background-image: url("./images/coffee.png");
+body {background-image: url("../images/tools.png");
 	background-image: no-repeat;
 
 }
+
+
+
+.container {
+  width: 100%; 
+  background-color: #ddd; 
+}
+
+.skills {
+  text-align: center; 
+  padding-top: 10px; 
+  padding-bottom: 10px; 
+  color: black; 
+}
+
+.html {width: 50%; background-color: #04AA6D;} 
+.css {width: 30%; background-color: #2196F3;} 
+.js {width: 20%; background-color: #f44336;} 
+.php {width: 70%; background-color: #808080;}
