--- a/css/tools.css
+++ b/css/tools.css
@@ -4,9 +4,9 @@
 }
 
 
-body {background-image: url("../images/tools.png");
+body {background-image: url("../images/tools1.jpg");
 	background-image: no-repeat;
-
+background-blend-mode: darken
 }
 
 
@@ -21,9 +21,77 @@ body {background-image: url("../images/tools.png");
   padding-top: 10px; 
   padding-bottom: 10px; 
   color: black; 
+  font-weight: bold;
 }
 
-.html {width: 50%; background-color: #04AA6D;} 
-.css {width: 30%; background-color: #2196F3;} 
-.js {width: 20%; background-color: #f44336;} 
-.php {width: 70%; background-color: #808080;}
+.html {width: 50%; background-color: darkred;} 
+.css {width: 30%; background-color: darkblue;} 
+.js {width: 20%; background-color: yellow;} 
+.sub {width: 70%; background-color: darkorange;}
+.boots {width: 60%; background-color: violet;}
+
+/*tools*/
+
+
+#icon {
+	border-radius: 4px;
+	width:50px;
+	height: auto;
+
+}
+
+@keyframes lights {
+  0% {
+    color: hsl(230, 40%, 80%);
+    text-shadow:
+      0 0 1em hsla(320, 100%, 50%, 0.2),
+      0 0 0.125em hsla(320, 100%, 60%, 0.3),
+      -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
+  
+  30% { 
+    color: hsl(230, 80%, 90%);
+    text-shadow:
+      0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 60%, 0.5),
+      -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+  
+  40% { 
+    color: hsl(230, 100%, 95%);
+    text-shadow:
+      0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 90%, 0.5),
+      -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 0.2),
+      0.25em 0.125em 0.125em hsla(200, 100%, 60%, 0.4);
+  }
+  
+  70% {
+    color: hsl(230, 80%, 90%);
+    text-shadow:
+      0 0 1em hsla(320, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 60%, 0.5),
+      0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+  
+  100% {
+    color: hsl(230, 40%, 80%);
+    text-shadow:
+      0 0 1em hsla(320, 100%, 50%, 0.2),
+      0 0 0.125em hsla(320, 100%, 60%, 0.3),
+      1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
+  
+}
+
+
+h3 {
+  margin: auto;
+  font-size: 3.5rem;
+  font-weight: 300;
+  animation: lights 5s 750ms linear infinite;
+}
