--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ body {background-image: url("./images/coffee.png");
 
 h1 {
   margin: auto;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 300;
   animation: lights 5s 750ms linear infinite;
 }
@@ -106,3 +106,6 @@ h3:hover span{
                0 0 40px #fff;
 }
 
+#blink {
+	text-align: center;
+}
